--- a/Assignments/A05_DataVisualization.Rmd
+++ b/Assignments/A05_DataVisualization.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 5: Data Visualization"
-author: "Student Name"
+author: "Masha Edmondson"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -29,9 +29,19 @@ The completed exercise is due on Tuesday, February 11 at 1:00 pm.
 
 ```{r}
 #1
+getwd()
+library(tidyverse)
+library(ggridges)
 
+PeterPaul.chem.nutrients <- 
+  read.csv("./Data/Processed/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv")
+PeterPaul.Chem.Physics <- read_csv("./Data/Processed/NTL-LTER_Lake_ChemistryPhysics_PeterPaul_Processed.csv")
+PeterPaul_Lake_Nutrients_Processed <- read_csv("./Data/Processed/NTL-LTER_Lake_Nutrients_PeterPaul_Processed.csv")
+PeterPaul.chem.nutrients.gathered <-
+  read.csv("./Data/Processed/NTL-LTER_Lake_Nutrients_PeterPaulGathered_Processed.csv")
 
 #2
+PeterPaul.chem.nutrients$sampledate <- as.sampledate(PeterPaul.chem.nutrients, format = "%Y/%m/%d")
 
 
 ```
