--- a/Assignments/A05_DataVisualization.Rmd
+++ b/Assignments/A05_DataVisualization.Rmd
@@ -32,25 +32,30 @@ The completed exercise is due on Tuesday, February 11 at 1:00 pm.
 getwd()
 library(tidyverse)
 library(ggridges)
-
+library(cowplot)
 PeterPaul.chem.nutrients <- 
   read.csv("./Data/Processed/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv")
-PeterPaul.Chem.Physics <- read_csv("./Data/Processed/NTL-LTER_Lake_ChemistryPhysics_PeterPaul_Processed.csv")
-PeterPaul_Lake_Nutrients_Processed <- read_csv("./Data/Processed/NTL-LTER_Lake_Nutrients_PeterPaul_Processed.csv")
-PeterPaul.chem.nutrients.gathered <-
+PeterPaul.nutrients.gathered <-
   read.csv("./Data/Processed/NTL-LTER_Lake_Nutrients_PeterPaulGathered_Processed.csv")
+NEON_NIWO_Litter_Processed <- read_csv("./Data/Processed/NEON_NIWO_Litter_mass_trap_Processed.csv")
 
 #2
-PeterPaul.chem.nutrients$sampledate <- as.sampledate(PeterPaul.chem.nutrients, format = "%Y/%m/%d")
+PeterPaul.chem.nutrients$sampledate <- as.Date(PeterPaul.chem.nutrients$sampledate, format = "%Y-%m-%d")
+PeterPaul.nutrients.gathered$sampledate <- as.Date(PeterPaul.nutrients.gathered$sampledate, format = "%Y-%m-%d")
 
-
+class(PeterPaul.chem.nutrients$sampledate)
+class(PeterPaul.chem.nutrients.gathered$sampledate)
+class(NEON_NIWO_Litter_Processed$collectDate)
 ```
 ## Define your theme
 3. Build a theme and set it as your default theme.
 
 ```{r}
+mytheme <- theme_classic(base_size = 14) + 
+  theme(axis.text = element_text(color = "black"),  
+        legend.position = "right") 
 
-
+theme_set(mytheme)
 ```
 
 ## Create graphs
@@ -59,8 +64,14 @@ For numbers 4-7, create ggplot graphs and adjust aesthetics to follow best pract
 4. [NTL-LTER] Plot total phosphorus by phosphate, with separate aesthetics for Peter and Paul lakes. Add a line of best fit and color it black. Adjust your axes to hide extreme values.
 
 ```{r}
-
-
+TP_PO4_plot <- ggplot(PeterPaul.chem.nutrients) + 
+  geom_point(aes(x=tp_ug, y =po4, shape= lakename, color =lakename))+
+  labs(x = expression(paste("Total Phosphorus (", mu, "g/L)")), y = expression(paste("Phosphate (", mu, "g/L)")), color= "lakename") +
+  xlim(0,150 ) + ylim(0, 50)+
+  #geom_smooth(method = lm) +
+  #geom_smooth(data=subset()
+  #geom_abline(aes(slope = 16, intercept = 0))
+print(TP_PO4_plot)
 
 ```
 
@@ -69,6 +80,9 @@ For numbers 4-7, create ggplot graphs and adjust aesthetics to follow best pract
 
 ```{r}
 
+PeterPaul.temp.plot <-ggplot(PeterPaul.chem.nutrients) +
+  geom_point(aes(x= month, y = temperature_C, color = lakename))
+print(PeterPaul.temp.plot)
 
 ```
 
